[gd_scene load_steps=2 format=3 uid="uid://dlg0tlctsdots"]

[ext_resource type="Script" path="res://source/gui/menus/OptionsMenu.gd" id="1_6qlty"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6qlty")

[node name="AudioOptions" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="AudioOptions"]
layout_mode = 2
offset_left = 354.0
offset_top = 216.0
offset_right = 949.0
offset_bottom = 485.0
color = Color(0.286275, 0.286275, 0.286275, 0.85098)

[node name="VBoxContainer" type="VBoxContainer" parent="AudioOptions"]
layout_mode = 0
offset_left = 429.0
offset_top = 249.0
offset_right = 880.0
offset_bottom = 441.0

[node name="LabelMaster" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Master"

[node name="SliderMaster" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.025
tick_count = 21
ticks_on_borders = true

[node name="LabelMusic" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Music"

[node name="SliderMusic" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.025
tick_count = 21
ticks_on_borders = true

[node name="LabelSFX" type="Label" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Sound Effects"

[node name="SliderSFX" type="HSlider" parent="AudioOptions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.025
tick_count = 21

[node name="ApplyButton" type="Button" parent="AudioOptions"]
layout_mode = 0
offset_left = 509.0
offset_top = 504.0
offset_right = 590.0
offset_bottom = 542.0
text = "Apply"

[node name="CloseButton" type="Button" parent="AudioOptions"]
layout_mode = 0
offset_left = 701.0
offset_top = 504.0
offset_right = 782.0
offset_bottom = 542.0
text = "Return"

[connection signal="drag_ended" from="AudioOptions/VBoxContainer/SliderMaster" to="." method="_on_slider_master_drag_ended"]
[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/SliderMaster" to="." method="_on_slider_master_mouse_exited"]
[connection signal="drag_ended" from="AudioOptions/VBoxContainer/SliderMusic" to="." method="_on_slider_music_drag_ended"]
[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/SliderMusic" to="." method="_on_slider_music_mouse_exited"]
[connection signal="drag_ended" from="AudioOptions/VBoxContainer/SliderSFX" to="." method="_on_slider_sfx_drag_ended"]
[connection signal="mouse_exited" from="AudioOptions/VBoxContainer/SliderSFX" to="." method="_on_slider_sfx_mouse_exited"]
[connection signal="pressed" from="AudioOptions/ApplyButton" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="AudioOptions/CloseButton" to="." method="_on_close_button_pressed"]
